[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/map/ui/MapParameterUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/map/ui/MapGenPanelGroup.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/map/ui/MapGenPanelGroupTech.gd" type="Script" id=3]

[node name="MapGenPanelGroup" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="MarginContainer" parent="." index="1"]
custom_constants/margin_bottom = 10

[node name="VBoxContainer" parent="MarginContainer" index="0"]
margin_bottom = 490.0

[node name="Title" parent="MarginContainer/VBoxContainer/MarginContainer/CenterContainer" index="0"]
margin_left = 324.0
margin_right = 445.0
text = "Technical variables"

[node name="ASideParamUI" parent="MarginContainer/VBoxContainer" index="1" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 43.0
margin_right = 770.0
margin_bottom = 110.0

[node name="MarginContainer" parent="MarginContainer/VBoxContainer/ASideParamUI" index="0"]
margin_right = 770.0
margin_bottom = 67.0

[node name="VBoxContainer" parent="MarginContainer/VBoxContainer/ASideParamUI/MarginContainer" index="0"]
margin_right = 770.0
margin_bottom = 62.0

[node name="CenterContainer" parent="MarginContainer/VBoxContainer/ASideParamUI/MarginContainer/VBoxContainer" index="0"]
margin_right = 770.0

[node name="ParameterName" parent="MarginContainer/VBoxContainer/ASideParamUI/MarginContainer/VBoxContainer/CenterContainer" index="0"]
margin_left = 363.0
margin_right = 406.0
text = "Length"

[node name="CenterContainer2" parent="MarginContainer/VBoxContainer/ASideParamUI/MarginContainer/VBoxContainer" index="1"]
margin_right = 770.0

[node name="ParameterValue" parent="MarginContainer/VBoxContainer/ASideParamUI/MarginContainer/VBoxContainer/CenterContainer2" index="0"]
margin_left = 377.0
margin_right = 393.0
text = "50"

[node name="HSlider" parent="MarginContainer/VBoxContainer/ASideParamUI/MarginContainer/VBoxContainer" index="2"]
margin_right = 770.0
value = 50.0

[node name="BSideParamUI" parent="MarginContainer/VBoxContainer" index="2" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 114.0
margin_right = 770.0
margin_bottom = 181.0

[node name="MarginContainer" parent="MarginContainer/VBoxContainer/BSideParamUI" index="0"]
margin_right = 770.0
margin_bottom = 67.0

[node name="VBoxContainer" parent="MarginContainer/VBoxContainer/BSideParamUI/MarginContainer" index="0"]
margin_right = 770.0
margin_bottom = 62.0

[node name="CenterContainer" parent="MarginContainer/VBoxContainer/BSideParamUI/MarginContainer/VBoxContainer" index="0"]
margin_right = 770.0

[node name="ParameterName" parent="MarginContainer/VBoxContainer/BSideParamUI/MarginContainer/VBoxContainer/CenterContainer" index="0"]
margin_left = 366.0
margin_right = 404.0
text = "Width"

[node name="CenterContainer2" parent="MarginContainer/VBoxContainer/BSideParamUI/MarginContainer/VBoxContainer" index="1"]
margin_right = 770.0

[node name="ParameterValue" parent="MarginContainer/VBoxContainer/BSideParamUI/MarginContainer/VBoxContainer/CenterContainer2" index="0"]
margin_left = 377.0
margin_right = 393.0
text = "25"

[node name="HSlider" parent="MarginContainer/VBoxContainer/BSideParamUI/MarginContainer/VBoxContainer" index="2"]
margin_right = 770.0
value = 25.0

[node name="NoiseParmUI" parent="MarginContainer/VBoxContainer" index="3" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 185.0
margin_right = 770.0
margin_bottom = 242.0

[node name="MarginContainer" parent="MarginContainer/VBoxContainer/NoiseParmUI" index="0"]
margin_right = 770.0
margin_bottom = 57.0

[node name="VBoxContainer" parent="MarginContainer/VBoxContainer/NoiseParmUI/MarginContainer" index="0"]
margin_right = 770.0
margin_bottom = 52.0

[node name="CenterContainer" parent="MarginContainer/VBoxContainer/NoiseParmUI/MarginContainer/VBoxContainer" index="0"]
margin_right = 770.0

[node name="ParameterName" parent="MarginContainer/VBoxContainer/NoiseParmUI/MarginContainer/VBoxContainer/CenterContainer" index="0"]
margin_left = 349.0
margin_right = 421.0
text = "Noise seed"

[node name="CenterContainer2" parent="MarginContainer/VBoxContainer/NoiseParmUI/MarginContainer/VBoxContainer" index="1"]
visible = false
margin_right = 770.0

[node name="ParameterValue" parent="MarginContainer/VBoxContainer/NoiseParmUI/MarginContainer/VBoxContainer/CenterContainer2" index="0"]
margin_left = 381.0
margin_right = 389.0

[node name="HSlider" parent="MarginContainer/VBoxContainer/NoiseParmUI/MarginContainer/VBoxContainer" index="2"]
visible = false
margin_right = 770.0

[node name="SpinBox" parent="MarginContainer/VBoxContainer/NoiseParmUI/MarginContainer/VBoxContainer" index="3"]
visible = true
margin_top = 18.0
margin_right = 770.0
margin_bottom = 42.0
min_value = -999999.0
max_value = 999999.0
[connection signal="value_changed" from="MarginContainer/VBoxContainer/ASideParamUI/MarginContainer/VBoxContainer/HSlider" to="." method="_on_length_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/BSideParamUI/MarginContainer/VBoxContainer/HSlider" to="." method="_on_width_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/NoiseParmUI/MarginContainer/VBoxContainer/SpinBox" to="." method="_on_seed_value_changed"]

[editable path="MarginContainer/VBoxContainer/ASideParamUI"]

[editable path="MarginContainer/VBoxContainer/BSideParamUI"]

[editable path="MarginContainer/VBoxContainer/NoiseParmUI"]
